syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package gamayun;

// The greeting service definition.
service Result{
  // Sends a greeting
  rpc ReportResult (TaskResult) returns (EmptyResponse) {}
}

// The request message containing the user's name.
message TaskResult {
  int32 jobId = 1; 
  repeated string results = 2;
}

// The response message containing the greetings
message EmptyResponse {
}
